--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xcode-theme-dark",
-  "displayName": "xcode-theme-dark",
+  "name": "macos-theme-dark",
+  "displayName": "macos-theme-dark",
   "description": "",
   "version": "0.0.1",
   "engines": {
